force-app/main/default/objects/HFS_User_Role_and_Location__mdt/HFS_User_Role_and_Location__mdt.object-meta.xml
<CustomObject>
    <label>HFS User Role and Location</label>
    <pluralLabel>HFS User Role and Locations</pluralLabel>
</CustomObject>