force-app/main/default/objects/HFS_User_Role_and_Location__mdt/fields/GSA_Role_and_Location__c.field-meta.xml
<CustomField>
    <fullName>GSA_Role_and_Location__c</fullName>
    <label>GSA Role and Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>