force-app/main/default/objects/HFS_User_Role_and_Location__mdt/fields/Runner_Role_and_Location__c.field-meta.xml
<CustomField>
    <fullName>Runner_Role_and_Location__c</fullName>
    <label>Runner Role and Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>