force-app/main/default/objects/HFS_User_Role_and_Location__mdt/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <label>Village</label>
    <length>255</length>
    <type>Text</type>
</CustomField>